# cmake_sample

./: .gitignore  CMakeLists.txt  README.md  build_cmake.sh  build_gcc.sh  run_with_ld_path.sh
inc/: curl_wrapper.h
lib/: libcurl.so.4.8.0
src/: curl_wrapper.cpp  main.cpp
